cmake_minimum_required(VERSION 3.28)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm Src/Main.cpp
        LuoGu/P1000.cpp
        LuoGu/P1085.cpp
        LuoGu/P1035.cpp
        LuoGu/P1980.cpp
        LuoGu/P1014.cpp
        LuoGu/P1307.cpp
        LuoGu/P1003.cpp
        LuoGu/P1042.cpp
        LuoGu/B4025.cpp
        LuoGu/P1067.cpp
        LuoGu/P1179.cpp
        LuoGu/P1328.cpp
        P1563.cpp
        LuoGu/P2615.cpp
        LuoGu/P1223.cpp
        LuoGu/P2001.cpp
        LuoGu/P3817.cpp
        LuoGu/P5019.cpp
        LuoGu/P1208.cpp
        LuoGu/P1080.cpp
        LuoGu/P3811.cpp)
